--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "backend",
+  "name": "billkeeper",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"yarn client\" \"yarn server\""
+  },
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -10,6 +16,7 @@
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.9",
+    "react-redux": "^7.1.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
